--- a/css/productos.css
+++ b/css/productos.css
@@ -6,6 +6,9 @@
 body{
     background-color: #f9f6f2;
 }
+.container h1{
+    margin-top: 100px;
+}
 .card-img-top{
     border-radius: 50px;
     padding: 20px;
@@ -17,6 +20,10 @@ body{
 .card-body{
     padding: 25px;
     margin-top: -15px;
+}
+.btn{
+    background-color: #72e9ad;
+    border: #4c9c74;
 }
 .btn-primary{
     border-radius: 50px;
