--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,31 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .sub-titulos{
-    background-color: #6ad2b6;
+    background-color: #72e9ad;
     width: 100%;
     padding: 40px;
+}
+
+.hero-section h1, h2{
+    font-weight: bold;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.hero-section h1,
+.hero-section h2 {
+    animation: fadeInUp 1s ease-out;
+}
+
+a{
+    margin: 0 5px;
 }
